# cloud-octo-examples

./: .gitignore  README.md
apigateway-lambda-api/: README.md  cdk.json  package-lock.json  package.json  test.http
cqrs/: README.md
dynamodb-dax/: lambda.tf  main.tf  variables.tf
event-sourcing-eventbridge/: Pulumi.yaml  package-lock.json  package.json
event-sourcing-eventbridge-cdk/: README.md  cdk.json  package-lock.json  package.json
event-sourcing-kinesis/: README.md
lambdas/layer/python/: errors.py  model.py  pyproject.toml
react-app-pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
saga-cdk/: README.md  cdk.json  package-lock.json  package.json
scripts/: bundle-layer.sh  export.sh
services/monolith/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt  test.http  test.sh
services/monolith/backend/: settings.py  urls.py
services/monolith/backend/quickstart/: views.py
services/monolith/nginx/: nginx.conf
single-table-design/: README.md
single-table-design/product/: README.md  app.py  dynamodb.py  lambda_handler.py  pyproject.toml  requirements.txt  test_lambda.py
single-table-design/product/addProductToSection/: main.py
single-table-design/product/createProduct/: event.json  main.py
single-table-design/product/editProduct/: main.py
single-table-design/product/getProductsBySection/: main.py
three-tier/: README.md  apply.sh  backend.tf  bucket.tf  cdn.tf  destroy.sh  hosted-zone.tf  main.tf  outputs.tf  populate_bucket.tpl  (+3 more)
three-tier-pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json  stack.json
(+208 files in other folders)
